# app/RestApiModels/Pedido.php
@@ -15,7 +15,7 @@ class Pedido extends Model
     public static $validation = [
         'tipped' => 'required|in:E,S',
         'numped' => 'required|unique_pedido',
-        'linped' => 'required:array',
+        'linped' => 'required|array',
         'fecent' => 'date_format:d/m/Y',
         'nomter' => 'required',
         'dirter' => 'required',
@@ -26,6 +26,37 @@ class Pedido extends Model
         'portes' => 'required|in:P,S,N,D',
         'serpar' => 'required|in:S,N',
         'reserv' => 'required|in:S,N',
+    ];
+
+    public static $validationFilters = [
+        'tipped' => 'in:E,S',
+        'numped' => 'string',
+        'fecent' => 'date_format:d/m/Y',
+        'nomter' => 'string',
+        'dirter' => 'string',
+        'pobter' => 'string',
+        'provter' => 'string',
+        'cpter' => 'string',
+        'portes' => 'in:P,S,N,D',
+        'limit' => 'integer',
+        'page' => 'integer'
+
+    ];
+
+    public static $showable = [
+        'tipped',
+        'numped',
+        'linped',
+        'fecent',
+        'nomter',
+        'dirter',
+        'pobter',
+        'provter',
+        'cpter',
+        'tlfter',
+        'portes',
+        'serpar',
+        'reserv'
     ];
 
 
